[gd_scene load_steps=6 format=2]

[ext_resource path="res://textures/GUI/MiniMenu.png" type="Texture" id=1]
[ext_resource path="res://Interface/Menu.tres" type="Theme" id=2]
[ext_resource path="res://textures/text/Bosk.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Interface/Menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=9]
resource_local_to_scene = true
size = 19
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.0
margin_top = -118.0
margin_right = 149.0
margin_bottom = 118.0
texture = ExtResource( 1 )

[node name="Head" type="Label" parent="Background"]
anchor_right = 1.0
margin_top = 8.0
margin_bottom = 50.0
text = "Menu"
align = 1

[node name="SingleplayerButton" type="Button" parent="Background"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -17.0
margin_right = 139.0
margin_bottom = 17.0
text = "Single"

[node name="MultiplayerButton" type="Button" parent="Background"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -154.0
margin_top = -17.0
margin_right = -22.0
margin_bottom = 16.0
text = "Multiplayer"

[node name="OptionButton" type="OptionButton" parent="Background/MultiplayerButton"]
unique_name_in_owner = true
margin_left = 37.0
margin_top = 47.0
margin_right = 129.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 9 )
text = "local"
align = 1
icon_align = 1
items = [ "local", null, false, 0, null, "external", null, false, 1, null ]
selected = 0

[node name="MultiplayerRefresh" type="Timer" parent="Background/MultiplayerButton"]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[node name="PlayerNickInput" type="LineEdit" parent="Background"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -63.0
margin_top = 60.0
margin_right = 121.0
margin_bottom = 86.0
align = 1
max_length = 20
context_menu_enabled = false

[node name="Nick" type="Label" parent="Background"]
margin_left = 40.0
margin_top = 64.0
margin_right = 110.0
margin_bottom = 104.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Nick:"

[connection signal="pressed" from="Background/SingleplayerButton" to="." method="_on_SingleplayerButton_pressed"]
[connection signal="pressed" from="Background/MultiplayerButton" to="." method="_on_MultiplayerButton_pressed"]
[connection signal="timeout" from="Background/MultiplayerButton/MultiplayerRefresh" to="." method="_on_MultiplayerRefresh_timeout"]
